--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,6 @@ dependencies {
     ksp ("androidx.room:room-compiler:$room_version")
     implementation("com.google.android.material:material:1.9.0")
     implementation 'androidx.appcompat:appcompat:1.6.1'
+
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
