--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.5'
+        kotlinCompilerExtensionVersion '1.4.7'
     }
     packagingOptions {
         resources {
@@ -70,13 +70,15 @@ dependencies {
 
     implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1")
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.1")
+    implementation("com.google.android.material:material:1.9.0")
+
     //room
     def room_version = "2.5.1"
     implementation ("androidx.room:room-runtime:$room_version")
     annotationProcessor ("androidx.room:room-compiler:$room_version")
     ksp ("androidx.room:room-compiler:$room_version")
-    implementation("com.google.android.material:material:1.9.0")
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation("androidx.room:room-ktx:$room_version")
 
     implementation 'com.google.code.gson:gson:2.9.0'
 }
