--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,7 +90,7 @@ dependencies {
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
     //firebase
-    implementation(platform("com.google.firebase:firebase-bom:32.2.0"))
-    implementation("com.google.firebase:firebase-analytics-ktx")
-    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+//    implementation(platform("com.google.firebase:firebase-bom:32.2.0"))
+//    implementation("com.google.firebase:firebase-analytics-ktx")
+//    implementation 'com.google.firebase:firebase-crashlytics-ktx'
 }
