--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp'
-    id("com.google.gms.google-services")
-    id 'com.google.firebase.crashlytics'
+//    id("com.google.gms.google-services")
+//    id 'com.google.firebase.crashlytics'
 }
 
 android {
