크래시리틱스 추가, 오류수정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp'
-//    id("com.google.gms.google-services")
-//    id 'com.google.firebase.crashlytics'
+    id("com.google.gms.google-services")
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -90,7 +90,7 @@ dependencies {
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
     //firebase
-//    implementation(platform("com.google.firebase:firebase-bom:32.2.0"))
-//    implementation("com.google.firebase:firebase-analytics-ktx")
-//    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation(platform("com.google.firebase:firebase-bom:32.7.0"))
+    implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
 }
