--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "com.weekly.weeklychecklist"
         minSdk 26
         targetSdk 33
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "1.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -90,12 +90,12 @@ dependencies {
     implementation("com.google.android.material:material:1.10.0")
 
     //room
-    def room_version = "2.6.0"
+    def room_version = "2.6.1"
     implementation ("androidx.room:room-runtime:$room_version")
-    annotationProcessor ("androidx.room:room-compiler:$room_version")
-    ksp ("androidx.room:room-compiler:$room_version")
-    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation("androidx.room:room-ktx:$room_version")
+    ksp ("androidx.room:room-compiler:$room_version")
+//    annotationProcessor ("androidx.room:room-compiler:$room_version")
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 
     implementation 'com.google.code.gson:gson:2.9.0'
 
